<resources>
    <string name="app_name">CatalogProject</string>
    <string name="example_title">Example Title</string>
    <string name="view_info">View Info</string>
    <string name="add_book">ADD BOOK</string>
    <string name="remove_book">REMOVE BOOK</string>
    <string name="search">SEARCH</string>
    <string name="books2prisoners_catalog">Books2Prisoners Catalog</string>
    <string name="title_here">title here</string>
    <string name="author_here">author here</string>
    <string name="genre_here">genre here</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="genre">Genre</string>
    <string name="info">info</string>
    <string name="description">description</string>
    <string name="add_book_to_catalog">ADD BOOK TO CATALOG</string>
    <string name="description_here">description here</string>
    <string name="your_list">Your List</string>
    <string name="sort_by">Sort By</string>
    <string name="remove">remove</string>
    <string name="confirmation">Are you sure you want\n to remove this book?\nThis is forever...</string>
    <string-array name="genre_array">
        <item>None</item>
        <item>Biography</item>
        <item>Fantasy</item>
        <item>Horror</item>
        <item>Mystery</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="sort_array">
        <item>Title</item>
        <item>Author</item>
        <item>Genre</item>
    </string-array>
    <string name="search_catalog">SEARCH CATALOG</string>
    <string name="keywords">keywords</string>
    <string name="remove_book_nfrom_database">Remove Book\nFrom Database</string>
    <string name="cancel">Cancel</string>
    <string name="todo">TODO</string>
</resources>
