<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/bookInfoText"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/example_title" />

        <Button
            android:id="@+id/bookInfoButton"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/view_info" />

        <Button
            android:id="@+id/bookRemoveButton"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remove_book" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>