<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookInfoActivity">

    <TextView
        android:id="@+id/titleAuthorView"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginTop="32dp"
        android:text="@string/info"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionView"
        android:layout_width="0dp"
        android:layout_height="86dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="10dp"
        android:text="@string/description"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genreView" />

    <TextView
        android:id="@+id/genreView"
        android:layout_width="0dp"
        android:layout_height="23dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:text="@string/genre"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleAuthorView" />

    <Button
        android:id="@+id/removeFromDatabaseButton"
        android:layout_width="189dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:text="@string/remove_book_nfrom_database"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionView" />
</androidx.constraintlayout.widget.ConstraintLayout>